# mdnotes

./: .gitignore  Readme.md  Readme.me
mdnotes/: AppDelegate.swift  ContentView.swift  Info.plist  MdNotes.swift  NotesView.swift  NotesWindowController.swift  WebView.swift  mdnotes-Bridging-Header.h
mdnotes-rust/: Cargo.toml  Readme.md
mdnotes-rust/mdnotes.xcodeproj/: project.pbxproj
mdnotes-rust/src/: c_interface.rs  lib.rs  main.rs  mdnotes.rs  runtime.rs  warp_fs.rs
mdnotes.xcodeproj/: project.pbxproj
mdnotes/Base.lproj/: Main.storyboard
mdnotesTests/: mdnotesTests.swift
mdnotesUITests/: mdnotesUITests.swift
